<resources>
    <string name="app_name">Rice nearby</string>

    <!--Label-->
    <string name="label_username">ชื่อผู้ใช้งาน (username)</string>
    <string name="label_email">อีเมล</string>
    <string name="label_password">รหัสผ่าน</string>
    <string name="label_confirm_password">ยืนยันรหัสผ่าน</string>

    <!--Error-->
    <string name="error_not_found">Not Found</string>
    <string name="error_username_invalid">Username is invalid</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_invalid">Password must be at least 6 characters.</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_mobile_invalid">Mobile number is invalid</string>
    <string name="error_id_card_invalid">ID card number is invalid</string>
    <string name="error_please_fill">Please fill</string>

    <!--Tabs-->
    <string name="tab_home">Home</string>
    <string name="tab_favorite">Fav</string>
    <string name="tab_cart">Cart</string>
    <!--<string name="tab_history">History</string>-->
    <string name="tab_schedule">Schedule</string>
    <string name="tab_profile">Profile</string>

    <!--Dialog-->
    <string name="dialog_login_failed">User not found.</string>
    <string name="dialog_register_failed">Register failed.</string>
    <string name="dialog_logout">คุณต้องการออกจากระบบใช่หรือไม่?</string>
    <string name="dialog_title_confirm_order">ยืนยันการสั่งซื้อ</string>

    <!--Title-->
    <string name="title_add_food">อัพโหลดเมนู</string>
    <string name="title_menu">เมนู</string>
    <string name="title_address">ที่อยู่</string>
    <string name="title_set_time">กำหนดเวลาขายอาหาร</string>
    <string name="title_cart">ตะกร้าของท่าน</string>

    <!--Login-->
    <string name="login_business_model">คนแถวนี้กินอะไรกัน?</string>
    <string name="login_title">ลงชื่อเข้าใช้ด้วยอีเมล</string>
    <string name="login_or">or</string>

    <!--Register-->
    <string name="register_title">สมัครสมาชิก</string>

    <!--Button-->
    <string name="button_login_facebook">ลงชื่อเข้าใช้ด้วย Facebook</string>
    <string name="button_login_email">ลงชื่อเข้าใช้ด้วยอีเมล</string>
    <string name="button_register">สมัครสมาชิก</string>
    <string name="button_login">ลงชื่อเข้าใช้งาน</string>
    <string name="button_forgot_password">ลืมรหัสผ่าน</string>
    <string name="button_close">ปิด</string>
    <string name="button_edit_profile">แก้ไขข้อมูล</string>
    <string name="button_register_seller">ลงทะเบียนผู้ขายอาหาร</string>
    <string name="button_register_sender">ลงทะเบียนผู้ส่งอาหาร</string>
    <string name="button_click_to_change">กดเพื่อเปลี่ยน</string>
    <string name="button_add_food">+ เพิ่มสินค้า</string>
    <string name="button_save">บันทึก</string>
    <string name="button_edit">แก้ไข</string>
    <string name="button_delete">ลบ</string>
    <string name="button_logout">ออกจากระบบ</string>
    <string name="button_add_cart">เพิ่มลงตะกร้า</string>
    <string name="button_buy_now">สั่งซื้อ</string>
    <string name="button_buy">สั่งซื้อ</string>
    <string name="button_confirm_order">ยืนยันออเดอร์</string>
    <string name="button_confirm_payment">ยืนยันการชำระเงิน</string>
    <string name="button_add">เพิ่ม</string>

    <!--Profile-->
    <string name="profile_history">ประวัติการสั่งซื้อ</string>
    <string name="profile_favorite_food">อาหารจารโปรด</string>
    <string name="profile_sell_income">รายได้จากการขายอาหาร</string>
    <string name="profile_send_income">รายได้จากการส่งอาหาร</string>
    <string name="profile_username_label">ชื่อผู้ใช้</string>
    <string name="profile_change_password_label">เปลี่ยนรหัสผ่าน</string>
    <string name="profile_name_label">ชื่อ-นามสกุล</string>
    <string name="profile_address_label">ที่อยู่</string>
    <string name="profile_gender_label">เพศ</string>
    <string name="profile_mobile_label">เบอร์โทรศัพท์</string>
    <string name="profile_email_label">อีเมล</string>
    <string name="profile_birthday_label">วันเกิด</string>
    <string name="profile_you_are_seller">สำหรับผู้ขาย</string>

    <string-array name="gender_list">
        <item>เลือกเพศของคุณ</item>
        <item>ชาย</item>
        <item>หญิง</item>
    </string-array>

    <!--Seller-->
    <string name="seller_set_time">กำหนดเวลาขายอาหาร</string>
    <string name="seller_order">ออเดอร์</string>
    <string name="seller_income">รายได้จากการขายอาหาร</string>
    <string name="seller_history">ประวัติการขาย</string>
    <string name="seller_review">รีวิว</string>
    <string name="seller_menu">เมนู</string>

    <string-array name="bank_list">
        <item>เลือกธนาคาร​​​</item>
        <item>ธนาคารกรุงเทพ จำกัด (มหาชน)​​​</item>
        <item>​​ธนาคารกรุงไท​ย จำกัด (มหาชน)</item>
        <item>​ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</item>
        <item>​​​ธนาคารกสิกรไทย จำกัด (มหาชน)​</item>
        <item>​​​​ธนาคารเกียรตินาคิน จำกัด (มหาชน)​​​</item>
        <item>​ธนาคารซีไอเอ็มบี ไทย จำกัด (มหาชน)</item>
        <item>​​​​​​ธนาคารทหารไทย จำกัด (มหาชน)​</item>
        <item>​ธนาคารทิสโก้ จำกัด (มหาชน)</item>
        <item>​ธนาคารไทยพาณิชย์ จำกัด (มหาชน)</item>
        <item>​ธนาคาร​ธนชาต จำกัด (มหาชน)</item>
        <item>ธนาคารยูโอบี จำกัด (มหาชน)</item>
        <item>​​ธน​าคารแลนด์ แอนด์ เฮ้าส์ จำกัด (มหาชน)</item>
        <item>​ธนาคารสแตนดาร์ดชาร์เตอร์ด (ไทย) จำกัด (มหาชน)</item>
        <item>​​​ธนาคารไอซีบีซี (ไทย) จำกัด (มหาชน)</item>
    </string-array>

    <!--Add Food-->
    <string name="add_menu_name">ชื่อเมนู</string>
    <string name="add_amount">จำนวน</string>
    <string name="add_price">ราคา</string>
    <string name="add_detail">รายละเอียด</string>
    <string name="add_meal_time">วันและมื้อ</string>
    <string name="add_type">ประเภทอาหาร (เลือกได้สูงสุด 2 ประเภท)</string>

    <!--Food type-->
    <string-array name="food_type_list">
        <item>อาหารคาว</item>
        <item>ของหวาน</item>
        <item>อาหารจีน</item>
        <item>อาหารสุขภาพ</item>
        <item>อาหารฮาลาล</item>
        <item>มังสวิรัต</item>
        <item>อาหารเกาหลี</item>
        <item>อาหารอิตาเลี่ยน</item>
        <item>อาหารเจ</item>
        <item>อาหารญี่ปุ่น</item>
        <item>อาหารไทย</item>

    </string-array>
    <string name="type_meat">อาหารคาว</string>
    <string name="type_dessert">อาหารหวาน</string>
    <string name="type_chinese_food">อาหารจีน</string>
    <string name="type_healthy_food">อาหารสุขภาพ</string>
    <string name="type_halal_food">อาหารฮาลาล</string>
    <string name="type_vegetarian">มังสวิรัต</string>
    <string name="type_korean_food">อาหารเกาหลี</string>
    <string name="type_italian_food">อาหารอิตาเลี่ยน</string>
    <string name="type_vegetarian_food">อาหารเจ</string>
    <string name="type_japanese_food">อาหารญี่ปุ่น</string>
    <string name="type_thai_food">อาหารไทย</string>

    <!--Set time-->
    <string name="settime_select_date">เลือกวันที่</string>
    <string name="settime_time">มื้อ</string>
    <string name="settime_breakfast">เช้า</string>
    <string name="settime_lunch">กลางวัน</string>
    <string name="settime_diner">เย็น</string>
    <string name="settime_late_diner">ค่ำ</string>
    <string name="settime_select_menu">+ เพิ่มเมนู</string>
    <string name="settime_select">เลือก</string>

    <string name="home_search_hint">อาหารที่คุณต้องการ...</string>

    <!--Cart-->
    <string name="cart_total_amount">จำนวนคงเหลือทั้งหมด %d จาน</string>

    <!--Seller-->
    <string name="seller_id_card">เลขบัตรประชาชน</string>
    <string name="seller_bank_account">เลขที่บัญชี</string>
    <string name="seller_bank_name">ชื่อผู้ถือบัตร</string>
    <string name="seller_bank">ธนาคาร</string>
    <string name="seller_bank_branch">สาขา</string>

    <string name="seller_add_copy_id_card">+ อัพโหลดสำเนาบัตรประชาชน</string>
    <string name="seller_add_copy_book_bank">+ อัพโหลดสำเนาสมุดบัญชี</string>

    <!--Order Status-->
    <string name="order_status_not_paid">ยังไม่ชำระเงิน</string>
    <string name="order_status_waiting_for_review">รอการตรวจสอบ</string>
    <string name="order_status_paid">ชำระเงินแล้ว</string>
    <string name="order_status_sending">กำลังจัดส่ง</string>
    <string name="order_status_received">ได้รับแล้ว</string>

    <string-array name="filter_list">
        <item>1 สัปดาห์</item>
        <item>2 สัปดาห์</item>
        <item>1 เดือน</item>
        <item>2 เดือน</item>
        <item>3 เดือน</item>
        <item>6 เดือน</item>
        <item>ทั้งหมด</item>

    </string-array>
</resources>
