<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_fav"
        android:title="@string/tab_favorite" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/tab_cart" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/tab_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab_profile" />
</menu>
