<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_xxxlarge"
    android:paddingStart="@dimen/padding_xxxlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xxxlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_business_model"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/login_title"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_email"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_password"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:background="@drawable/button_primary"
            android:text="@string/button_login"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/login_or"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/button_facebook"
            android:text="@string/button_login_facebook"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_small"
        android:text="@string/button_register"
        android:textSize="@dimen/text_normal" />
</RelativeLayout>