<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_login"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_xxxlarge"
    android:paddingEnd="@dimen/padding_xxxlarge"
    android:paddingStart="@dimen/padding_xxxlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/register_title"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_username"
            android:inputType="text"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext"
            android:hint="@string/label_confirm_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:background="@drawable/button_primary"
            android:text="@string/button_register"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>
</RelativeLayout>