<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal">

        <EditText
            android:id="@+id/edt_identity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:hint="@string/seller_id_card"
            android:inputType="number"
            android:maxLength="13"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_bank_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:hint="@string/seller_bank_account"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:hint="@string/seller_bank_name"
            android:inputType="text"
            android:maxLength="50"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small" />

        <EditText
            android:id="@+id/edt_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:hint="@string/seller_bank_branch"
            android:inputType="text"
            android:maxLength="50"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small" />

        <Button
            android:id="@+id/btn_copy_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small"
            android:text="@string/seller_add_copy_id_card" />

        <Button
            android:id="@+id/btn_copy_book_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:background="@drawable/background_edittext_gray"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small"
            android:text="@string/seller_add_copy_book_bank" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginBottom="@dimen/padding_normal"
            android:background="@drawable/button_primary"
            android:text="@string/button_register_seller"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>
</LinearLayout>