<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_mini">

            <Button
                android:id="@+id/btn_add_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                android:text="@string/button_add_food"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_mini"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seller_menu" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_mini"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seller_set_time" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_mini"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seller_order" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>